# SmartStack

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  SmartStack.pro  codecov.yml
CMakeModules/: CodeCoverage.cmake
bench/: bench.pro  main.cpp
libsmartstack/: function.cpp  function.h  instrumentation.h  libsmartstack.pro  report.cpp  report.h  smartstack.F90  smartstack.cpp  smartstack.h  smartstack_global.h  smartstackf.h  smartstackftn.cpp  stack.cpp  stack.h  stackimpl.cpp  stackimpl.h  timer.cpp  timer.h
src/: function.cpp  function.h  instrumentation.h  report.cpp  report.h  smartstack.F90  smartstack.h  smartstack_types.h  smartstackf.h  smartstackftn.cpp  stack.cpp  stack.h  stackimpl.cpp  stackimpl.h  timer.cpp  timer.h
test/: fortranTest.F90  main.cpp
tests/: cxx_testSmartStack.cpp  ftn_testSmartStack.F90  ftn_testSmartStackParallel.F90  test.pro  tests.pro
